Finish final work 1 / 6 in total.

--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -974,7 +974,15 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 從圖 \ref{f4} 我們可以發現一些規則，例如，%
 「nagee」較常分享蘋果日報（www.appledaily.com.tw）及批踢踢（www.ptt.cc）的消息；%
 「Taiwan Fugue」較常分享自由時報（news.ltn.com.tw）及蘋果日報（www.appledaily.com.tw）的消息；%
-「白色正義聯盟」較常分享聯合報（udn.com）的消息；「我是台灣人 (I am Taiwanese)」較常分享「綠黨」的消息等等。%
+「白色正義聯盟」較常分享聯合新聞網（udn.com）的消息；「我是台灣人 (I am Taiwanese)」較常分享「綠黨」的消息等等。%
+
+另外，此圖也呈現出各政黨／侯選人／意見領袖之間的關係。%
+例如「苗博雅 MiaoPoya」、「呂欣潔 Jennifer Lu」和「大安推范雲」皆屬於同一個政黨，因此他們在圖中也屬於同一個社群。%
+同樣地，「白色正義聯盟」、「挺馬英九聯盟」和「藍白拖的逆襲」彼此有相近的政治立場，因此他們在圖中的位置也比較相近。%
+
+最後，從圖中圓點的大小，我們還可以看出哪些消息來源最常被人們引用。%
+在此次選舉中最常被人們引用的消息來源是 YouTube（www.youtube.com 或 youtu.be）、%
+自由時報（news.ltn.com.tw）、蘋果日報（www.appledaily.com.tw）和聯合新聞網（udn.com）等等。%
 
 \section*{五、結論}
 
