--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -51,6 +51,12 @@
 \newcolumntype{C}[1]{>{\centering\arraybackslash}p{#1}}
 \newcolumntype{R}[1]{>{\raggedleft\arraybackslash}p{#1}}
 
+\DeclareRobustCommand{\charkun}{%
+  \begingroup\normalfont
+  \includegraphics[height=0.9em]{kun}%
+  \endgroup
+}
+
 \maketitle
 \thispagestyle{empty}
 \pagestyle{empty}
@@ -512,7 +518,7 @@ Appendectomy Project 割闌尾計畫 & 145 & 0.76\% \\
 陳菊 (花媽) 市長 & 129 & 0.68\% \\
 我是中壢人 & 124 & 0.65\% \\
 林智堅 & 121 & 0.64\% \\
-游錫堃 & 120 & 0.63\% \\
+游錫\charkun{} & 120 & 0.63\% \\
 徐巧芯 & 119 & 0.63\% \\
 邱鏡淳 & 116 & 0.61\% \\
 醫勞盟 & 115 & 0.61\% \\
@@ -648,7 +654,7 @@ Appendectomy Project 割闌尾計畫 & 落選 & 闌尾 & 立委 & 罷免 & 割 &
 批踢踢實業坊(Ptt.cc) & 鄉民 & 原 & 世界 & 投票 & 真的 & 台灣 & 談 & 專業 & 媒體 & 笑 \\
 林聰賢 & 宜蘭 & 台灣 & 中 & 縣府 & 宜蘭縣 & 朋友 & 新 & 民眾 & 同仁 & 種 \\
 反馬英九聯盟 & 國民黨 & 朱立倫 & 馬英九 & 王如玄 & 立委 & 台灣 & 新 & 政府 & 軍宅 & 中國 \\
-游錫堃 & 台灣 & 總統 & 小英 & 新 & 中 & 國民黨 & 北市 & 朱立倫 & 未 & 民進黨 \\
+游錫\charkun{} & 台灣 & 總統 & 小英 & 新 & 中 & 國民黨 & 北市 & 朱立倫 & 未 & 民進黨 \\
 我是台灣人．台灣是咱的國家 & 台灣 & 國民黨 & 台灣人 & 中國 & 民進黨 & 中 & 總統 & 國會 & 選舉 & 朱立倫 \\
 馮光遠 & 台灣 & 國民黨 & 片名 & 中 & 馬英九 & 裡 & 眉批 & 朱立倫 & 事 & 吳育昇 \\
 綠黨 & 台灣 & 綠黨 & 中 & 聯盟 & 政治 & 勞工 & 社會民主黨 & 綠社盟 & 環境 & 政府 \\
@@ -842,7 +848,7 @@ Appendectomy Project 割闌尾計畫 & 10/30 (33.33\%) & 19/27 (70.37\%) & 7/18 
 批踢踢實業坊(Ptt.cc) & 4/19 (21.05\%) & 7/12 (58.33\%) & 8/11 (72.73\%) & 3/8 (37.50\%) & 8/12 (66.67\%) & 1/4 (25.00\%) & 8/16 (50.00\%) & 4/6 (66.67\%) & 3/5 (60.00\%) & 12/17 (70.59\%) & 4/8 (50.00\%) & 10/19 (52.63\%) & 6/18 (33.33\%) & 78/155 (50.32\%) \\
 林聰賢 & 0/8 (0.00\%) & 0/8 (0.00\%) & 0/4 (0.00\%) & 0/7 (0.00\%) & 0/6 (0.00\%) & 2/7 (28.57\%) & 0/4 (0.00\%) & 1/6 (16.67\%) & 1/9 (11.11\%) & 0/8 (0.00\%) & 1/12 (8.33\%) & 1/5 (20.00\%) & 0/12 (0.00\%) & 6/96 (6.25\%) \\
 反馬英九聯盟 & 34/44 (77.27\%) & 30/32 (93.75\%) & 22/26 (84.62\%) & 16/19 (84.21\%) & 18/21 (85.71\%) & 25/28 (89.29\%) & 24/26 (92.31\%) & 23/26 (88.46\%) & 19/23 (82.61\%) & 8/16 (50.00\%) & 15/17 (88.24\%) & 17/18 (94.44\%) & 21/30 (70.00\%) & 272/326 (83.44\%) \\
-游錫堃 & 1/7 (14.29\%) & 2/10 (20.00\%) & 3/7 (42.86\%) & 1/7 (14.29\%) & 6/9 (66.67\%) & 4/9 (44.44\%) & 1/8 (12.50\%) & 5/12 (41.67\%) & 2/5 (40.00\%) & 4/10 (40.00\%) & 8/12 (66.67\%) & 1/4 (25.00\%) & 3/8 (37.50\%) & 41/108 (37.96\%) \\
+游錫\charkun{} & 1/7 (14.29\%) & 2/10 (20.00\%) & 3/7 (42.86\%) & 1/7 (14.29\%) & 6/9 (66.67\%) & 4/9 (44.44\%) & 1/8 (12.50\%) & 5/12 (41.67\%) & 2/5 (40.00\%) & 4/10 (40.00\%) & 8/12 (66.67\%) & 1/4 (25.00\%) & 3/8 (37.50\%) & 41/108 (37.96\%) \\
 我是台灣人．台灣是咱的國家 & 20/44 (45.45\%) & 14/20 (70.00\%) & 6/12 (50.00\%) & 5/7 (71.43\%) & 6/9 (66.67\%) & 9/10 (90.00\%) & 10/11 (90.91\%) & 4/6 (66.67\%) & 11/23 (47.83\%) & 5/5 (100.00\%) & 12/21 (57.14\%) & 0/1 (0.00\%) & 0/0 (-) & 102/169 (60.36\%) \\
 馮光遠 & 5/19 (26.32\%) & 5/8 (62.50\%) & 6/7 (85.71\%) & 3/4 (75.00\%) & 5/5 (100.00\%) & 6/6 (100.00\%) & 5/5 (100.00\%) & 6/6 (100.00\%) & 6/8 (75.00\%) & 4/5 (80.00\%) & 6/8 (75.00\%) & 1/2 (50.00\%) & 2/6 (33.33\%) & 60/89 (67.42\%) \\
 綠黨 & 1/45 (2.22\%) & 2/53 (3.77\%) & 2/20 (10.00\%) & 4/23 (17.39\%) & 3/18 (16.67\%) & 1/16 (6.25\%) & 3/11 (27.27\%) & 8/18 (44.44\%) & 2/11 (18.18\%) & 6/16 (37.50\%) & 7/22 (31.82\%) & 4/19 (21.05\%) & 6/25 (24.00\%) & 49/297 (16.50\%) \\
