Finish final work 3 & 4 / 6 in total.

--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -247,15 +247,15 @@
 本研究分析的資料來自 2016 年台灣總統選舉競選期間臉書各大政治性粉絲專頁之公開資料。%
 本研究進行的分析包含以下四個部份：%
 \begin{itemize}
-\item 貼文數量對時間的關係圖。\\
-各政黨／侯選人／意見領袖的貼文數量。%
-\item 每個時間區間最熱門的關鍵字分別是哪些？\\
-嘗試透過關鍵字分析，\\
-找出各政黨／侯選人／意見領袖最重視的議題。%
-\item 有多少比例的貼文是攻擊型競選？\\
-哪些政黨／候選人／意見領袖、什麼時候\\
-最常使用攻擊型競選？%
-\item 各發文者與其分享的貼文的來源之網絡圖。\\
+\item 各政黨\raisebox{0.1em}{$/$}侯選人\raisebox{0.1em}{$/$}意見領袖分別發佈了多少篇貼文？\\
+每日的貼文數量隨著時間有什麼樣的改變？%
+\item 各政黨\raisebox{0.1em}{$/$}侯選人\raisebox{0.1em}{$/$}意見領袖最關心的議題是什麼？\\
+人們關注的焦點隨著時間有什麼樣的改變？\\
+本次選舉人們最關心什麼？%
+\item 哪些政黨\raisebox{0.1em}{$/$}候選人\raisebox{0.1em}{$/$}意見領袖最常使用攻擊型競選？\\
+什麼時候人們最常使用攻擊型競選？\\
+本次選舉有多少比例的貼文是攻擊型競選？%
+\item 各發文者與其分享的資訊的來源有什麼樣的關係？\\
 特定族群是否會傾向於分享特定來源的資訊？%
 \end{itemize}
 
@@ -1002,10 +1002,6 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
                                   % sure that you do not shorten the textheight too much.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section*{附錄}
-
-在這裡輸入文字。%
 
 \section*{誌謝}
 
