Finish final work 5 / 6 in total.

--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -64,11 +64,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{abstract}
-摘要\enskip---\enskip可以輸入繁體字了。教育雲端服務平臺將進行資安設備調整作業，並於本次作業時程完成後，%
-進行網站功能測試，屆時網路服務將會中斷，造成您的不便，敬請見諒。獲得快速的翻譯。%
-應該還要有一行，不可能只寫那麼少。可是這樣還不夠多，還不會換行。可以再給我多一點嗎，我很需要換下一行。%
-臺灣東部地區有局部短暫陣雨，其他地區及澎湖、金門、馬祖為多雲到晴，午後中南部地區及北部山區亦有局部短暫雷陣雨。%
-明日東海北部平均風力將稍減弱。本局將盡力確保其即時性及正確性。%
+摘要\enskip---\enskip本研究嘗試使用關鍵字擷取（keyword extraction）、%
+情感分析（sentiment analysis）、社會網絡分析（social network analysis）等方法，%
+分析 2016 年台灣總統選舉競選期間臉書各大政治性粉絲專頁之公開資料，探討使用者於社群網站上之政治活動的模式。%
+本研究發現此次選舉有 26.63\% 的社群媒體貼文是攻擊型競選，與台灣、中國或中國國民黨有關的議題是人們最關注的焦點，%
+且特定族群會傾向於分享特定來源的資訊。%
+同時，本研究也提供了後續研究者一套有效地自動化分析線上政治活動的方法。%
 \end{abstract}
 
 \begin{keywords}
@@ -992,7 +993,9 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 
 \section*{五、結論}
 
-在這裡輸入文字。%
+本研究發現此次選舉有 26.63\% 的社群媒體貼文是攻擊型競選，與台灣、中國或中國國民黨有關的議題是人們最關注的焦點，%
+且特定族群會傾向於分享特定來源的資訊。%
+同時，本研究也提供了後續研究者一套有效地自動化分析線上政治活動的方法。%
 
 \addtolength{\textheight}{-12cm}  % This command serves to balance the column lengths
                                   % on the last page of the document manually. It shortens
