Finish final work 6 / 6 in total.

--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -997,6 +997,25 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 且特定族群會傾向於分享特定來源的資訊。%
 同時，本研究也提供了後續研究者一套有效地自動化分析線上政治活動的方法。%
 
+本研究做的只是初步的、嘗試性的分析，後續研究者還可以再做更深入的探究。%
+此外，我認為以下幾點也值得進一步探討：%
+
+(1) 比較使用者於網路上對各政黨／候選人／意見領袖表達支持的人數與實際的選舉結果，%
+考察社群網站上的輿論反應出社會大眾意見的程度。%
+\,(2) 社會大眾意見極化之現象是否存在？該如何理解？%
+我的推論是，有愈來愈多人使用社群媒體來接收政治新聞，%
+然而台灣許多發佈政治新聞的粉絲專頁都有很鮮明的意識型態，報導內容也相當偏頗。%
+但是社群媒體的檢索演算法會將我們最可能感興趣的文章排序在最前面，%
+因此抱持特定立場者會關注特定的粉絲專頁。%
+機器用戶於粉絲專頁大量留言，或擁護自己的立場，或對反對者批評謾罵，%
+強化對立並製造出擁有人數優勢的假象。%
+這使得使用者對自己的立場更加堅定，%
+缺少機會傾聽反對者的想法，人們意見更加分歧，難以達成共識。%
+\,(3) 線上政治參與可能為台灣政治帶來哪些正面／負面影響？%
+
+要回答這些問題，可能還需搭配其他計算機科學以外的研究方法。%
+例如設計問卷以調查使用者使用社群網站之習慣、張貼政治評論之動機等。%
+
 \addtolength{\textheight}{-12cm}  % This command serves to balance the column lengths
                                   % on the last page of the document manually. It shortens
                                   % the textheight of the last page by a suitable amount.
