--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -134,7 +134,7 @@
 常見對社會模擬的批評包含：%
 \,(1) 將現實社會過度地簡化為一般化的法則。%
 \,(2) 模擬的成果仰賴預先建立好的模型，難以發現新的法則。%
-\,(3) 預先建立的模型往往充滿偏見。%
+\,(3) 預先建立的模型容易帶有偏見。%
 \,(4) 模擬的成果並不能反映出現實社會的情況。%
 
 我的回應是，我認為傳統社會科學研究法仍是不可或缺的：%
@@ -698,7 +698,7 @@ nagee & 台灣 & 中國 & 國民黨 & 政府 & 種 & 國家 & 台灣人 & 人民
 魏明谷 & 彰化 & 彰化縣 & 台灣 & 活動 & 縣府 & 中 & 政府 & 民眾 & 高鐵 & 國 \\
 嘉義市長涂醒哲 & 嘉義市 & 嘉義 & 市府 & 市民 & 文化 & 新 & 台灣 & 活動 & 未來 & 健康 \\
 施明德 & 台灣 & 中 & 人民 & 烏魚 & 總統 & 中華民國 & 國民黨 & 國際 & 國軍 & 國家 \\
-Tumorectomy Project 割腫瘤計畫 & None & None & None & None & None & None & None & None & None & None \\
+Tumorectomy Project 割腫瘤計畫 & --- & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
 吳志剛 & 委員 & 門診 & 整合 & 病人 & 市長 & 希望 & 萬華區 & 剛 & 參加 & 物資 \\
 徐永明 & 力量 & 時代 & 台灣 & 國會 & 人民 & 新 & 2016 & 挺 & 政治 & 國民黨 \\
 打馬悍將粉絲團 & 國民黨 & 朱立倫 & 台灣 & 真的 & 中國 & 版主 & 新聞 & 馬英九 & 投票 & 連結 \\
@@ -706,7 +706,7 @@ Tumorectomy Project 割腫瘤計畫 & None & None & None & None & None & None & 
 林志嘉 & 台灣 & 台聯 & 中國 & 國民黨 & 中 & 人民 & 總統 & 立法院 & 政府 & 馬英九 \\
 台北。生生不息。王閔生 & 蔡英文 & 兒童 & 台北市 & 服務 & 家庭 & 主席 & 元 & 台灣 & 同志 & 市府 \\
 反洗腦課綱學生陣線 & 課綱 & 立委 & 委員 & 學生 & 微調 & 民進黨 & 歷史 & 點 & 鄭麗君 & 台聯 \\
-台大法律學生挺318 & None & None & None & None & None & None & None & None & None & None \\
+台大法律學生挺318 & --- & --- & --- & --- & --- & --- & --- & --- & --- & --- \\
 民國黨 & 台灣 & 民國黨 & 政府 & 徐欣瑩 & 人民 & 政策 & 國家 & 經濟 & 主席 & 希望 \\
 社會民主黨 & 台灣 & 社會民主黨 & 立委 & 聯盟 & 中 & 綠社盟 & 勞工 & 政治 & 總統 & 綠黨 \\
 洪秀柱 & 國家 & 黨 & 中 & 兩岸 & 柱柱姐 & 支持 & 國民黨 & 人民 & 希望 & 政治 \\
@@ -987,6 +987,13 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 例如「苗博雅 MiaoPoya」、「呂欣潔 Jennifer Lu」和「大安推范雲」皆屬於同一個政黨，因此他們在圖中也屬於同一個社群。%
 同樣地，「白色正義聯盟」、「挺馬英九聯盟」和「藍白拖的逆襲」彼此有相近的政治立場，因此他們在圖中的位置也比較相近。%
 
+\addtolength{\textheight}{-4.8cm} % This command serves to balance the column lengths
+                                  % on the last page of the document manually. It shortens
+                                  % the textheight of the last page by a suitable amount.
+                                  % This command does not take effect until the next page
+                                  % so it should come on the page before the last. Make
+                                  % sure that you do not shorten the textheight too much.
+
 最後，從圖中圓點的大小，我們還可以看出哪些消息來源最常被人們引用。%
 在此次選舉中最常被人們引用的消息來源是 YouTube（www.youtube.com 或 youtu.be）、%
 自由時報（news.ltn.com.tw）、蘋果日報（www.appledaily.com.tw）和聯合新聞網（udn.com）等等。%
@@ -1015,13 +1022,6 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 
 要回答這些問題，可能還需搭配其他計算機科學以外的研究方法。%
 例如設計問卷以調查使用者使用社群網站之習慣、張貼政治評論之動機等。%
-
-\addtolength{\textheight}{-12cm}  % This command serves to balance the column lengths
-                                  % on the last page of the document manually. It shortens
-                                  % the textheight of the last page by a suitable amount.
-                                  % This command does not take effect until the next page
-                                  % so it should come on the page before the last. Make
-                                  % sure that you do not shorten the textheight too much.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
