Limit table length.

--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -2,9 +2,9 @@
 %2345678901234567890123456789012345678901234567890123456789012345678901234567890
 %        1         2         3         4         5         6         7         8
 
-\documentclass[letterpaper, 10pt, conference]{ieeeconf}   % Comment this line out
+\documentclass[a4paper, 10pt, conference]{ieeeconf}       % Comment this line out
                                                           % if you need a4paper
-%\documentclass[a4paper, 10pt, conference]{ieeeconf}      % Use this line for a4
+%\documentclass[letterpaper, 10pt, conference]{ieeeconf}  % Use this line for a4
                                                           % paper
 
 \IEEEoverridecommandlockouts                              % This command is only
@@ -577,8 +577,8 @@ Tumorectomy Project 割腫瘤計畫 & 1 & 0.01\% \\
 台大法律學生挺318 & 1 & 0.01\% \\* \bottomrule
 \end{longtable}
 
-\begin{longtable}[c]{@{}L{2.45cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}@{}}
-\caption{關鍵字擷取，依作者劃分}
+\begin{longtable}[c]{@{}L{2.45cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.41cm}L{1.1cm}L{1.1cm}@{}}
+\caption{關鍵字擷取，依作者劃分{\small （限於篇幅，僅節錄部份資料）}}
 \label{t2}\\
 \toprule
 粉絲專頁名稱 & \#1 & \#2 & \#3 & \#4 & \#5 & \#6 & \#7 & \#8 & \#9 & \#10 \\* \midrule
@@ -594,46 +594,47 @@ Tumorectomy Project 割腫瘤計畫 & 1 & 0.01\% \\
 %
 朱立倫 & 台灣 & 新 & 孩子 & 支持 & 推動 & 政策 & 國民黨 & 北市 & 經濟 & 中 \\
 大安推范雲 & 范雲 & 台灣 & 政治 & 中 & 感謝 & 朋友 & 支持 & 新 & 立委 & 大安 \\
-王丹网站 Wang Dan's Page & 中國 & 中 & 大學 & 朋友 & 運動 & 台灣 & 件 & 國家 & 臺灣 & 老師 \\
+王丹网站 Wa\dots & 中國 & 中 & 大學 & 朋友 & 運動 & 台灣 & 件 & 國家 & 臺灣 & 老師 \\
 國民黨青年團 & 青年 & 台灣 & 活動 & 力量 & 總統 & 朱立倫 & 主席 & 青年團 & 報名 & 時間 \\
-呂欣潔 Jennifer Lu & 政治 & 欣潔 & 台灣 & 中 & 呂欣潔 & 朋友 & 希望 & 支持 & 新 & 照顧 \\
-管碧玲 (kuanbiling) & 管媽 & 市長 & 台灣 & 高雄 & 朋友 & 旗津 & 中 & 總部 & 市民 & 第一 \\
+呂欣潔 Jennif\dots & 政治 & 欣潔 & 台灣 & 中 & 呂欣潔 & 朋友 & 希望 & 支持 & 新 & 照顧 \\
+管碧玲 (kuan\dots & 管媽 & 市長 & 台灣 & 高雄 & 朋友 & 旗津 & 中 & 總部 & 市民 & 第一 \\
 段宜康 & 朱立倫 & 國民黨 & 王如玄 & 台灣 & 新 & 公司 & 買 & 委員 & 兩 & 候選人 \\
 鄉民實業坊 & 黑子 & 種 & 書 & 中 & 現場 & 文章 & 真的 & 幫 & Chenglap & 11 \\
-我是台灣人 (I am Taiwanese) & 台灣 & 綠黨 & 聯盟 & 國民黨 & 政黨 & 中 & 政治 & 立委 & 支持 & 新 \\
+我是台灣人 (\dots & 台灣 & 綠黨 & 聯盟 & 國民黨 & 政黨 & 中 & 政治 & 立委 & 支持 & 新 \\
 林智堅 & 新竹市 & 新竹 & 市民 & 服務 & 中 & 城市 & 客家 & 朋友 & 台灣 & 座 \\
-BillyPan 潘建志醫師 & 醫師 & 台灣 & 潘建志 & 潘 & 潘醫師 & 中 & 支持 & 朋友 & 號 & 感謝 \\
+BillyPan 潘\dots & 醫師 & 台灣 & 潘建志 & 潘 & 潘醫師 & 中 & 支持 & 朋友 & 號 & 感謝 \\
 蔡錦隆加油讚 & 蔡錦隆 & 錦隆 & 台灣 & 總部 & 競選 & 台中 & 鄉親 & 今日 & 立委 & 舉辦 \\
 馬英九 & 臺灣 & 中 & 政府 & 兩 & 阿嬤 & 我國 & 兩岸 & 中華民國 & 國際 & 孩子 \\
 醫勞盟 & 醫師 & 醫療 & 健保 & 醫院 & 元 & 病人 & 醫勞盟 & 人員 & 月 & 健保署 \\
-陳其邁 Chen Chi-Mai & 國民黨 & 元 & 中 & 台灣 & 食品 & 總統 & 民進黨 & 朱立倫 & 抹黑 & 約 \\
-中國國民黨 KMT & 台灣 & 朱立倫 & 國民黨 & 未來 & 經濟 & 兩岸 & 政策 & 立委 & 主席 & 國家 \\
+陳其邁 Chen\dots & 國民黨 & 元 & 中 & 台灣 & 食品 & 總統 & 民進黨 & 朱立倫 & 抹黑 & 約 \\
+中國國民黨\dots & 台灣 & 朱立倫 & 國民黨 & 未來 & 經濟 & 兩岸 & 政策 & 立委 & 主席 & 國家 \\
 徐欣瑩 & 台灣 & 欣瑩 & 徐欣瑩 & 民國黨 & 民眾 & 人民 & 中 & 政治 & 主席 & 鄉親 \\
-全國廢核行動平台 & 能源 & 核 & 台電 & 核電 & 核電廠 & 政府 & 核災 & 台灣 & 中 & 核四 \\
+全國廢核行\dots & 能源 & 核 & 台電 & 核電 & 核電廠 & 政府 & 核災 & 台灣 & 中 & 核四 \\
 柯文哲 & 台北 & 政府 & 市民 & 市府 & 中 & 台北市 & 臺北市 & 工作 & 台灣 & 臺北 \\
 白色正義聯盟 & 台灣 & 支持 & 白盟 & 民進黨 & 兩岸 & 國民黨 & 小編 & 馬 & 中 & 總統 \\
-台灣勞工陣線協會 & 勞工 & 台灣 & 勞動 & 工作 & 政府 & 工會 & 中國 & 勞陣 & 元 & 經濟 \\
+台灣勞工陣\dots & 勞工 & 台灣 & 勞動 & 工作 & 政府 & 工會 & 中國 & 勞陣 & 元 & 經濟 \\
 謝長廷 & 國民黨 & 台灣 & 候選人 & 民進黨 & 總統 & 立委 & 英文 & 蔡 & 兩 & 曾 \\
 柯建銘 & 柯建銘 & 新竹 & 國會 & 新竹市 & 台灣 & 國民黨 & 民進黨 & 柯 & 改革 & 總召 \\
 法操FOLLAW & 檢察官 & 大法客 & 證據 & 法官 & 起訴 & 新 & 案 & 頂 & 司法 & Q \\
 王定宇 & 台南 & 定宇 & 永康 & 國民黨 & 點 & 仁德 & 中 & 來到 & 台灣 & 參加 \\
 鄭永金後援會 & 新竹 & 鄭永金 & 台灣 & 新竹縣 & 鄉親 & 蔡英文 & 支持 & 客家 & 活動 & 感謝 \\
 黃韻涵粉絲頁 & 韻涵 & 活動 & 岡山 & 高雄 & 希望 & 中 & 支持 & 感謝 & 鄉親 & 一同 \\
-小聖蚊的治國日記 & 國民黨 & 台灣 & 朱立倫 & 話 & 馬英九 & 支持 & 新聞 & 民進黨 & 蛆 & 食安 \\
+小聖蚊的治\dots & 國民黨 & 台灣 & 朱立倫 & 話 & 馬英九 & 支持 & 新聞 & 民進黨 & 蛆 & 食安 \\
 民主進步黨 & 全文 & 台灣 & 蔡英文 & 號 & 民進黨 & 產業 & 新 & 立委 & 國民黨 & 改革 \\
-周芷萱　斬父權獨立劍　老娘就是反骨！ & 台灣 & 性 & 中 & 種 & 社會 & 女性 & 性別 & 女人 & 工作 & 老娘 \\
+周芷萱　斬\dots & 台灣 & 性 & 中 & 種 & 社會 & 女性 & 性別 & 女人 & 工作 & 老娘 \\
 賴清德 & 台南 & 台灣 & 朋友 & 文化 & 市民 & 中 & 新 & 市府 & 台南市 & 感謝 \\
 Taiwan Fugue & 國民黨 & 朱立倫 & 台灣 & 馬英九 & 立委 & 新 & 中國 & 總統 & 王如玄 & 中 \\
 林佳龍 & 台中 & 市府 & 台灣 & 台中市 & 中 & 希望 & 元 & 市民 & 未來 & 活動 \\
-公民廟口-立委在做天在看 & 台灣 & 立委 & 真的 & 種 & 中國 & 想 & 國民黨 & 國會 & 政府 & 中 \\
+公民廟口-立\dots & 台灣 & 立委 & 真的 & 種 & 中國 & 想 & 國民黨 & 國會 & 政府 & 中 \\
 吳秉叡 & 新莊 & 台灣 & 秉 & 鄉親 & 大秉 & 新 & 小英 & 立委 & 秉叡 & 中 \\
 張承中 & 政府 & 兩 & 想 & 民調 & 朋友 & 11 & 整合 & 企業 & 公益 & 希望 \\
-幸福好粽 鍾易仲 & 易仲 & 鄉親 & 美濃 & 邱議瑩 & 立委 & 高雄市 & 高雄 & 台灣 & 水 & 鍾易仲 \\
+幸福好粽 鍾\dots & 易仲 & 鄉親 & 美濃 & 邱議瑩 & 立委 & 高雄市 & 高雄 & 台灣 & 水 & 鍾易仲 \\
 鄭弘儀 & 寶島 & 台灣 & 大哥 & 世界 & 節目 & 鄭 & 中國 & 聯播網 & 馬英九 & 管理員 \\
 趙正宇 & 正宇 & 桃園 & 活動 & 趙正宇 & 八德 & 改變 & 支持 & 八德區 & 力量 & 新 \\
 我是中壢人 & 中壢 & 桃園 & 仲介 & 台灣 & 學生 & 點 & 學校 & 中 & 時間 & 教學 \\
-王金平 & 國會 & 改革 & 台灣 & 立委 & 國民黨 & 委員 & 立法院 & 支持 & 民進黨 & 人民 \\
-黑色島國青年陣線 & 馬英九 & 人民 & 台灣 & 總統 & 中國 & 馬習會 & 政府 & 中 & 透過 & 國民黨 \\
+王金平 & 國會 & 改革 & 台灣 & 立委 & 國民黨 & 委員 & 立法院 & 支持 & 民進黨 & 人民 \\* \bottomrule
+\iffalse
+黑色島國青\dots & 馬英九 & 人民 & 台灣 & 總統 & 中國 & 馬習會 & 政府 & 中 & 透過 & 國民黨 \\
 邱鏡淳 & 新竹縣 & 台灣 & 鏡淳 & 活動 & 新竹 & 民眾 & 竹東 & 縣府 & 日 & 中 \\
 台灣新力量/羅致政粉絲團 & 板橋 & 台灣 & 羅致政 & 新 & 致政 & 選舉 & 蔡英文 & 朋友 & 中 & 活動 \\
 蔡正元 & 蔡英文 & 台灣 & 政治 & 大陸 & 中國 & 美國 & 兩岸 & 種 & 中 & 民進黨 \\
@@ -720,6 +721,7 @@ Tumorectomy Project 割腫瘤計畫 & --- & --- & --- & --- & --- & --- & --- & 
 民間司法改革基金會 & 律師 & 司法 & 法官 & 檢察官 & 台灣 & 案件 & 人民 & 法院 & 法律 & 判決 \\
 宋楚瑜 & 台灣 & 政府 & 宋楚瑜 & 小宋 & 主席 & 人民 & 總統 & — & 國家 & 宋 \\
 特急件小周的人渣文本 & 國民黨 & 種 & 中 & 想 & 台灣 & 選舉 & 新 & 講 & 政治 & 朱立倫 \\* \bottomrule
+\fi
 \end{longtable}
 
 \begin{longtable}[c]{@{}L{2.45cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}@{}}
@@ -737,29 +739,29 @@ Tumorectomy Project 割腫瘤計畫 & --- & --- & --- & --- & --- & --- & --- & 
 %
 \endlastfoot
 %
-2016-01-10 $\sim$ 2016-01-17 & 台灣 & 國民黨 & 中 & 立委 & 新 & 支持 & 政治 & 中國 & 候選人 & 選舉 \\
-2016-01-03 $\sim$ 2016-01-10 & 台灣 & 中 & 國民黨 & 號 & 政府 & 新 & 立委 & 支持 & 兩 & 候選人 \\
-2015-12-27 $\sim$ 2016-01-03 & 台灣 & 中 & 政府 & 新 & 國民黨 & 政治 & 立委 & 兩 & 社會 & 支持 \\
-2015-12-20 $\sim$ 2015-12-27 & 台灣 & 中 & 國民黨 & 新 & 政府 & 立委 & 號 & 國會 & 候選人 & 支持 \\
-2015-12-13 $\sim$ 2015-12-20 & 台灣 & 中 & 新 & 國民黨 & 政府 & 立委 & 中國 & 政治 & 國會 & 支持 \\
-2015-12-06 $\sim$ 2015-12-13 & 台灣 & 中 & 國民黨 & 政府 & 新 & 社會 & 活動 & 立委 & 政治 & 支持 \\
-2015-11-29 $\sim$ 2015-12-06 & 台灣 & 中 & 新 & 立委 & 政治 & 政府 & 國民黨 & 中國 & 支持 & 種 \\
-2015-11-22 $\sim$ 2015-11-29 & 台灣 & 中 & 新 & 立委 & 國民黨 & 政府 & 中國 & 政治 & 活動 & 兩 \\
-2015-11-15 $\sim$ 2015-11-22 & 台灣 & 中 & 政府 & 新 & 政治 & 立委 & 活動 & 社會 & 兩 & 國家 \\
-2015-11-08 $\sim$ 2015-11-15 & 台灣 & 中 & 中國 & 政府 & 政治 & 新 & 活動 & 立委 & 支持 & 國民黨 \\
-2015-11-01 $\sim$ 2015-11-08 & 台灣 & 中 & 中國 & 政府 & 總統 & 馬英九 & 馬習會 & 人民 & 國民黨 & 兩岸 \\
-2015-10-25 $\sim$ 2015-11-01 & 台灣 & 中 & 國民黨 & 新 & 政府 & 政治 & 支持 & 立委 & 活動 & 兩 \\
-2015-10-17 $\sim$ 2015-10-25 & 台灣 & 中 & 新 & 國民黨 & 政治 & 活動 & 政府 & 朱立倫 & 文化 & 朋友 \\* \bottomrule
+2016-01-10\newline $\sim$ 2016-01-17 & 台灣 & 國民黨 & 中 & 立委 & 新 & 支持 & 政治 & 中國 & 候選人 & 選舉 \\
+2016-01-03\newline $\sim$ 2016-01-10 & 台灣 & 中 & 國民黨 & 號 & 政府 & 新 & 立委 & 支持 & 兩 & 候選人 \\
+2015-12-27\newline $\sim$ 2016-01-03 & 台灣 & 中 & 政府 & 新 & 國民黨 & 政治 & 立委 & 兩 & 社會 & 支持 \\
+2015-12-20\newline $\sim$ 2015-12-27 & 台灣 & 中 & 國民黨 & 新 & 政府 & 立委 & 號 & 國會 & 候選人 & 支持 \\
+2015-12-13\newline $\sim$ 2015-12-20 & 台灣 & 中 & 新 & 國民黨 & 政府 & 立委 & 中國 & 政治 & 國會 & 支持 \\
+2015-12-06\newline $\sim$ 2015-12-13 & 台灣 & 中 & 國民黨 & 政府 & 新 & 社會 & 活動 & 立委 & 政治 & 支持 \\
+2015-11-29\newline $\sim$ 2015-12-06 & 台灣 & 中 & 新 & 立委 & 政治 & 政府 & 國民黨 & 中國 & 支持 & 種 \\
+2015-11-22\newline $\sim$ 2015-11-29 & 台灣 & 中 & 新 & 立委 & 國民黨 & 政府 & 中國 & 政治 & 活動 & 兩 \\
+2015-11-15\newline $\sim$ 2015-11-22 & 台灣 & 中 & 政府 & 新 & 政治 & 立委 & 活動 & 社會 & 兩 & 國家 \\
+2015-11-08\newline $\sim$ 2015-11-15 & 台灣 & 中 & 中國 & 政府 & 政治 & 新 & 活動 & 立委 & 支持 & 國民黨 \\
+2015-11-01\newline $\sim$ 2015-11-08 & 台灣 & 中 & 中國 & 政府 & 總統 & 馬英九 & 馬習會 & 人民 & 國民黨 & 兩岸 \\
+2015-10-25\newline $\sim$ 2015-11-01 & 台灣 & 中 & 國民黨 & 新 & 政府 & 政治 & 支持 & 立委 & 活動 & 兩 \\
+2015-10-17\newline $\sim$ 2015-10-25 & 台灣 & 中 & 新 & 國民黨 & 政治 & 活動 & 政府 & 朱立倫 & 文化 & 朋友 \\* \bottomrule
 \end{longtable}
 
 \begin{longtable}[c]{@{}L{2.45cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}@{}}
 \caption{關鍵字擷取，合併所有貼文}
 \label{t4}\\
 \toprule
---- & \#1 & \#2 & \#3 & \#4 & \#5 & \#6 & \#7 & \#8 & \#9 & \#10 \\* \midrule
+ & \#1 & \#2 & \#3 & \#4 & \#5 & \#6 & \#7 & \#8 & \#9 & \#10 \\* \midrule
 \endfirsthead
 \toprule
---- & \#1 & \#2 & \#3 & \#4 & \#5 & \#6 & \#7 & \#8 & \#9 & \#10 \\* \midrule
+ & \#1 & \#2 & \#3 & \#4 & \#5 & \#6 & \#7 & \#8 & \#9 & \#10 \\* \midrule
 \endhead
 %
 \bottomrule
@@ -772,13 +774,13 @@ Tumorectomy Project 割腫瘤計畫 & --- & --- & --- & --- & --- & --- & --- & 
 
 \begin{landscape}
 \begin{longtable}[c]{@{}L{2.45cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}@{}}
-\caption{貼文情感分析}
+\caption{貼文情感分析{\small （限於篇幅，僅節錄部份資料）}}
 \label{t5}\\
 \toprule
-粉絲專頁名稱 & 2016-01-10 $\sim$ 2016-01-17 & 2016-01-03 $\sim$ 2016-01-10 & 2015-12-27 $\sim$ 2016-01-03 & 2015-12-20 $\sim$ 2015-12-27 & 2015-12-13 $\sim$ 2015-12-20 & 2015-12-06 $\sim$ 2015-12-13 & 2015-11-29 $\sim$ 2015-12-06 & 2015-11-22 $\sim$ 2015-11-29 & 2015-11-15 $\sim$ 2015-11-22 & 2015-11-08 $\sim$ 2015-11-15 & 2015-11-01 $\sim$ 2015-11-08 & 2015-10-25 $\sim$ 2015-11-01 & 2015-10-17 $\sim$ 2015-10-25 & 所有時間區間 \\* \midrule
+\newline粉絲專頁名稱\newline & 01/10 \newline \hspace*{1em}$\vert$ \newline 01/17 & 01/03 \newline \hspace*{1em}$\vert$ \newline 01/10 & 12/27 \newline \hspace*{1em}$\vert$ \newline 01/03 & 12/20 \newline \hspace*{1em}$\vert$ \newline 12/27 & 12/13 \newline \hspace*{1em}$\vert$ \newline 12/20 & 12/06 \newline \hspace*{1em}$\vert$ \newline 12/13 & 11/29 \newline \hspace*{1em}$\vert$ \newline 12/06 & 11/22 \newline \hspace*{1em}$\vert$ \newline 11/29 & 11/15 \newline \hspace*{1em}$\vert$ \newline 11/22 & 11/08 \newline \hspace*{1em}$\vert$ \newline 11/15 & 11/01 \newline \hspace*{1em}$\vert$ \newline 11/08 & 10/25 \newline \hspace*{1em}$\vert$ \newline 11/01 & 10/17 \newline \hspace*{1em}$\vert$ \newline 10/25 & {\bfseries 所有\newline時間\newline區間} \\* \midrule
 \endfirsthead
 \toprule
-粉絲專頁名稱 & 2016-01-10 $\sim$ 2016-01-17 & 2016-01-03 $\sim$ 2016-01-10 & 2015-12-27 $\sim$ 2016-01-03 & 2015-12-20 $\sim$ 2015-12-27 & 2015-12-13 $\sim$ 2015-12-20 & 2015-12-06 $\sim$ 2015-12-13 & 2015-11-29 $\sim$ 2015-12-06 & 2015-11-22 $\sim$ 2015-11-29 & 2015-11-15 $\sim$ 2015-11-22 & 2015-11-08 $\sim$ 2015-11-15 & 2015-11-01 $\sim$ 2015-11-08 & 2015-10-25 $\sim$ 2015-11-01 & 2015-10-17 $\sim$ 2015-10-25 & 所有時間區間 \\* \midrule
+\newline粉絲專頁名稱\newline & 01/10 \newline \hspace*{1em}$\vert$ \newline 01/17 & 01/03 \newline \hspace*{1em}$\vert$ \newline 01/10 & 12/27 \newline \hspace*{1em}$\vert$ \newline 01/03 & 12/20 \newline \hspace*{1em}$\vert$ \newline 12/27 & 12/13 \newline \hspace*{1em}$\vert$ \newline 12/20 & 12/06 \newline \hspace*{1em}$\vert$ \newline 12/13 & 11/29 \newline \hspace*{1em}$\vert$ \newline 12/06 & 11/22 \newline \hspace*{1em}$\vert$ \newline 11/29 & 11/15 \newline \hspace*{1em}$\vert$ \newline 11/22 & 11/08 \newline \hspace*{1em}$\vert$ \newline 11/15 & 11/01 \newline \hspace*{1em}$\vert$ \newline 11/08 & 10/25 \newline \hspace*{1em}$\vert$ \newline 11/01 & 10/17 \newline \hspace*{1em}$\vert$ \newline 10/25 & {\bfseries 所有\newline時間\newline區間} \\* \midrule
 \endhead
 %
 \bottomrule
@@ -789,16 +791,18 @@ Tumorectomy Project 割腫瘤計畫 & --- & --- & --- & --- & --- & --- & --- & 
 朱立倫 & 1/30 (3.33\%) & 1/18 (5.56\%) & 2/18 (11.11\%) & 0/18 (0.00\%) & 0/17 (0.00\%) & 0/20 (0.00\%) & 2/17 (11.76\%) & 0/16 (0.00\%) & 2/6 (33.33\%) & 0/15 (0.00\%) & 1/15 (6.67\%) & 0/15 (0.00\%) & 1/5 (20.00\%) & 10/210 (4.76\%) \\
 大安推范雲 & 2/35 (5.71\%) & 0/27 (0.00\%) & 3/20 (15.00\%) & 0/17 (0.00\%) & 0/23 (0.00\%) & 0/21 (0.00\%) & 2/18 (11.11\%) & 1/18 (5.56\%) & 0/12 (0.00\%) & 1/12 (8.33\%) & 2/13 (15.38\%) & 2/10 (20.00\%) & 1/13 (7.69\%) & 14/239 (5.86\%) \\
 王丹网站 Wang Dan's Page & 3/14 (21.43\%) & 6/11 (54.55\%) & 6/16 (37.50\%) & 2/12 (16.67\%) & 2/13 (15.38\%) & 7/12 (58.33\%) & 0/9 (0.00\%) & 1/7 (14.29\%) & 0/5 (0.00\%) & 0/9 (0.00\%) & 0/4 (0.00\%) & 5/13 (38.46\%) & 5/12 (41.67\%) & 37/137 (27.01\%) \\
-國民黨青年團 & 1/4 (25.00\%) & 0/4 (0.00\%) & 0/3 (0.00\%) & 0/2 (0.00\%) & 1/2 (50.00\%) & 0/0 (-) & 0/1 (0.00\%) & 1/11 (9.09\%) & 0/6 (0.00\%) & 1/8 (12.50\%) & 0/7 (0.00\%) & 0/3 (0.00\%) & 0/0 (-) & 4/51 (7.84\%) \\
+國民黨青年團 & 1/4 (25.00\%) & 0/4 (0.00\%) & 0/3 (0.00\%) & 0/2 (0.00\%) & 1/2 (50.00\%) & 0/0 \newline (-) & 0/1 (0.00\%) & 1/11 (9.09\%) & 0/6 (0.00\%) & 1/8 (12.50\%) & 0/7 (0.00\%) & 0/3 (0.00\%) & 0/0 \newline (-) & 4/51 (7.84\%) \\
 呂欣潔 Jennifer Lu & 2/32 (6.25\%) & 2/25 (8.00\%) & 0/19 (0.00\%) & 0/18 (0.00\%) & 1/16 (6.25\%) & 1/16 (6.25\%) & 0/18 (0.00\%) & 3/11 (27.27\%) & 0/17 (0.00\%) & 1/17 (5.88\%) & 4/11 (36.36\%) & 3/11 (27.27\%) & 1/15 (6.67\%) & 18/226 (7.96\%) \\
 管碧玲 (kuanbiling) & 2/24 (8.33\%) & 3/23 (13.04\%) & 0/12 (0.00\%) & 1/16 (6.25\%) & 2/11 (18.18\%) & 2/13 (15.38\%) & 3/7 (42.86\%) & 2/10 (20.00\%) & 0/13 (0.00\%) & 1/13 (7.69\%) & 0/3 (0.00\%) & 1/7 (14.29\%) & 1/9 (11.11\%) & 18/161 (11.18\%) \\
 段宜康 & 12/35 (34.29\%) & 10/19 (52.63\%) & 13/21 (61.90\%) & 9/11 (81.82\%) & 11/14 (78.57\%) & 9/14 (64.29\%) & 7/9 (77.78\%) & 10/12 (83.33\%) & 8/11 (72.73\%) & 8/11 (72.73\%) & 7/13 (53.85\%) & 11/14 (78.57\%) & 9/14 (64.29\%) & 124/198 (62.63\%) \\
-鄉民實業坊 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/1 (0.00\%) & 5/9 (55.56\%) & 3/11 (27.27\%) & 6/12 (50.00\%) & 3/7 (42.86\%) & 6/10 (60.00\%) & 23/50 (46.00\%) \\
+鄉民實業坊 & 0/0 \newline (-) & 0/0 \newline (-) & 0/0 \newline (-) & 0/0 \newline (-) & 0/0 \newline (-) & 0/0 \newline (-) & 0/0 \newline (-) & 0/1 (0.00\%) & 5/9 (55.56\%) & 3/11 (27.27\%) & 6/12 (50.00\%) & 3/7 (42.86\%) & 6/10 (60.00\%) & 23/50 (46.00\%) \\
 我是台灣人 (I am Taiwanese) & 8/47 (17.02\%) & 14/46 (30.43\%) & 6/28 (21.43\%) & 7/22 (31.82\%) & 1/22 (4.55\%) & 7/18 (38.89\%) & 3/13 (23.08\%) & 7/15 (46.67\%) & 3/8 (37.50\%) & 8/13 (61.54\%) & 9/17 (52.94\%) & 5/12 (41.67\%) & 11/16 (68.75\%) & 89/277 (32.13\%) \\
 林智堅 & 0/13 (0.00\%) & 0/9 (0.00\%) & 0/7 (0.00\%) & 0/8 (0.00\%) & 0/8 (0.00\%) & 0/8 (0.00\%) & 0/7 (0.00\%) & 0/10 (0.00\%) & 0/9 (0.00\%) & 0/10 (0.00\%) & 0/7 (0.00\%) & 0/12 (0.00\%) & 0/11 (0.00\%) & 0/119 (0.00\%) \\
+\vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots \\
+\iffalse
 BillyPan 潘建志醫師 & 1/49 (2.04\%) & 0/34 (0.00\%) & 1/30 (3.33\%) & 0/26 (0.00\%) & 0/27 (0.00\%) & 3/25 (12.00\%) & 0/21 (0.00\%) & 8/20 (40.00\%) & 6/17 (35.29\%) & 1/15 (6.67\%) & 0/10 (0.00\%) & 2/16 (12.50\%) & 0/12 (0.00\%) & 22/302 (7.28\%) \\
 蔡錦隆加油讚 & 2/8 (25.00\%) & 1/5 (20.00\%) & 1/8 (12.50\%) & 0/10 (0.00\%) & 0/7 (0.00\%) & 0/7 (0.00\%) & 0/7 (0.00\%) & 2/10 (20.00\%) & 1/5 (20.00\%) & 0/8 (0.00\%) & 1/8 (12.50\%) & 1/6 (16.67\%) & 0/9 (0.00\%) & 9/98 (9.18\%) \\
-馬英九 & 0/6 (0.00\%) & 0/4 (0.00\%) & 0/5 (0.00\%) & 0/4 (0.00\%) & 0/4 (0.00\%) & 0/4 (0.00\%) & 1/2 (50.00\%) & 1/3 (33.33\%) & 0/0 (-) & 0/2 (0.00\%) & 1/4 (25.00\%) & 0/3 (0.00\%) & 0/3 (0.00\%) & 3/44 (6.82\%) \\
+馬英九 & 0/6 (0.00\%) & 0/4 (0.00\%) & 0/5 (0.00\%) & 0/4 (0.00\%) & 0/4 (0.00\%) & 0/4 (0.00\%) & 1/2 (50.00\%) & 1/3 (33.33\%) & 0/0 \newline (-) & 0/2 (0.00\%) & 1/4 (25.00\%) & 0/3 (0.00\%) & 0/3 (0.00\%) & 3/44 (6.82\%) \\
 醫勞盟 & 3/7 (42.86\%) & 4/9 (44.44\%) & 4/8 (50.00\%) & 4/10 (40.00\%) & 2/11 (18.18\%) & 3/4 (75.00\%) & 2/7 (28.57\%) & 8/11 (72.73\%) & 2/4 (50.00\%) & 9/14 (64.29\%) & 1/4 (25.00\%) & 2/9 (22.22\%) & 11/16 (68.75\%) & 55/114 (48.25\%) \\
 陳其邁 Chen Chi-Mai & 3/19 (15.79\%) & 7/13 (53.85\%) & 19/21 (90.48\%) & 11/22 (50.00\%) & 5/8 (62.50\%) & 9/11 (81.82\%) & 8/10 (80.00\%) & 4/8 (50.00\%) & 3/15 (20.00\%) & 6/11 (54.55\%) & 10/10 (100.00\%) & 8/11 (72.73\%) & 12/23 (52.17\%) & 105/182 (57.69\%) \\
 中國國民黨 KMT & 1/29 (3.45\%) & 3/22 (13.64\%) & 3/22 (13.64\%) & 5/26 (19.23\%) & 7/25 (28.00\%) & 3/20 (15.00\%) & 0/16 (0.00\%) & 1/18 (5.56\%) & 0/10 (0.00\%) & 0/15 (0.00\%) & 2/19 (10.53\%) & 2/18 (11.11\%) & 3/13 (23.08\%) & 30/253 (11.86\%) \\
@@ -815,7 +819,7 @@ BillyPan 潘建志醫師 & 1/49 (2.04\%) & 0/34 (0.00\%) & 1/30 (3.33\%) & 0/26 
 黃韻涵粉絲頁 & 0/24 (0.00\%) & 0/27 (0.00\%) & 1/17 (5.88\%) & 0/13 (0.00\%) & 0/13 (0.00\%) & 0/16 (0.00\%) & 1/22 (4.55\%) & 0/16 (0.00\%) & 0/12 (0.00\%) & 0/14 (0.00\%) & 0/10 (0.00\%) & 0/15 (0.00\%) & 0/11 (0.00\%) & 2/210 (0.95\%) \\
 小聖蚊的治國日記 & 26/38 (68.42\%) & 14/22 (63.64\%) & 4/11 (36.36\%) & 4/11 (36.36\%) & 5/7 (71.43\%) & 9/14 (64.29\%) & 12/17 (70.59\%) & 7/10 (70.00\%) & 3/4 (75.00\%) & 3/6 (50.00\%) & 6/10 (60.00\%) & 10/14 (71.43\%) & 8/14 (57.14\%) & 111/178 (62.36\%) \\
 民主進步黨 & 3/35 (8.57\%) & 6/37 (16.22\%) & 2/25 (8.00\%) & 2/21 (9.52\%) & 4/25 (16.00\%) & 4/28 (14.29\%) & 2/21 (9.52\%) & 2/14 (14.29\%) & 1/21 (4.76\%) & 0/23 (0.00\%) & 2/9 (22.22\%) & 1/17 (5.88\%) & 1/15 (6.67\%) & 30/291 (10.31\%) \\
-周芷萱　斬父權獨立劍　老娘就是反骨！ & 2/11 (18.18\%) & 4/8 (50.00\%) & 1/4 (25.00\%) & 4/4 (100.00\%) & 3/5 (60.00\%) & 1/2 (50.00\%) & 2/3 (66.67\%) & 4/4 (100.00\%) & 2/2 (100.00\%) & 3/4 (75.00\%) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 26/47 (55.32\%) \\
+周芷萱　斬父權獨立劍　老娘就是反骨！ & 2/11 (18.18\%) & 4/8 (50.00\%) & 1/4 (25.00\%) & 4/4 (100.00\%) & 3/5 (60.00\%) & 1/2 (50.00\%) & 2/3 (66.67\%) & 4/4 (100.00\%) & 2/2 (100.00\%) & 3/4 (75.00\%) & 0/0 \newline (-) & 0/0 \newline (-) & 0/0 \newline (-) & 26/47 (55.32\%) \\
 賴清德 & 0/8 (0.00\%) & 0/7 (0.00\%) & 0/7 (0.00\%) & 0/11 (0.00\%) & 0/8 (0.00\%) & 0/10 (0.00\%) & 0/9 (0.00\%) & 0/15 (0.00\%) & 0/13 (0.00\%) & 0/8 (0.00\%) & 1/10 (10.00\%) & 0/11 (0.00\%) & 0/13 (0.00\%) & 1/130 (0.77\%) \\
 Taiwan Fugue & 36/52 (69.23\%) & 30/37 (81.08\%) & 21/29 (72.41\%) & 19/24 (79.17\%) & 28/29 (96.55\%) & 18/18 (100.00\%) & 16/19 (84.21\%) & 27/29 (93.10\%) & 21/23 (91.30\%) & 22/24 (91.67\%) & 25/28 (89.29\%) & 18/22 (81.82\%) & 20/27 (74.07\%) & 301/361 (83.38\%) \\
 林佳龍 & 0/12 (0.00\%) & 0/7 (0.00\%) & 2/14 (14.29\%) & 0/12 (0.00\%) & 0/13 (0.00\%) & 0/19 (0.00\%) & 0/16 (0.00\%) & 0/12 (0.00\%) & 2/14 (14.29\%) & 1/18 (5.56\%) & 0/13 (0.00\%) & 0/15 (0.00\%) & 0/23 (0.00\%) & 5/188 (2.66\%) \\
@@ -907,20 +911,20 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 蔣萬安 & 0/20 (0.00\%) & 0/13 (0.00\%) & 0/9 (0.00\%) & 0/9 (0.00\%) & 0/8 (0.00\%) & 0/8 (0.00\%) & 0/9 (0.00\%) & 1/7 (14.29\%) & 0/4 (0.00\%) & 0/4 (0.00\%) & 0/5 (0.00\%) & 0/4 (0.00\%) & 0/5 (0.00\%) & 1/105 (0.95\%) \\
 苗博雅 MiaoPoya & 1/25 (4.00\%) & 3/14 (21.43\%) & 3/18 (16.67\%) & 2/8 (25.00\%) & 3/8 (37.50\%) & 3/12 (25.00\%) & 5/13 (38.46\%) & 3/13 (23.08\%) & 6/13 (46.15\%) & 6/13 (46.15\%) & 8/15 (53.33\%) & 4/13 (30.77\%) & 4/22 (18.18\%) & 51/187 (27.27\%) \\
 洪慈庸 & 0/27 (0.00\%) & 1/27 (3.70\%) & 3/34 (8.82\%) & 1/16 (6.25\%) & 1/16 (6.25\%) & 2/15 (13.33\%) & 2/10 (20.00\%) & 0/16 (0.00\%) & 2/19 (10.53\%) & 1/19 (5.26\%) & 0/12 (0.00\%) & 1/11 (9.09\%) & 1/13 (7.69\%) & 15/235 (6.38\%) \\
-王如玄 & 2/55 (3.64\%) & 3/55 (5.45\%) & 2/46 (4.35\%) & 2/40 (5.00\%) & 0/6 (0.00\%) & 0/0 (-) & 0/0 (-) & 0/2 (0.00\%) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 9/204 (4.41\%) \\
+王如玄 & 2/55 (3.64\%) & 3/55 (5.45\%) & 2/46 (4.35\%) & 2/40 (5.00\%) & 0/6 (0.00\%) & 0/0 (-) & 0/0 (-) & 0/2 (0.00\%) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 \newline (-) & 9/204 (4.41\%) \\
 時代力量 New Power Party & 1/31 (3.23\%) & 2/27 (7.41\%) & 3/16 (18.75\%) & 4/13 (30.77\%) & 4/22 (18.18\%) & 3/12 (25.00\%) & 2/8 (25.00\%) & 3/9 (33.33\%) & 1/7 (14.29\%) & 0/13 (0.00\%) & 8/11 (72.73\%) & 2/7 (28.57\%) & 2/12 (16.67\%) & 35/188 (18.62\%) \\
 費鴻泰（阿力克司） & 0/21 (0.00\%) & 0/15 (0.00\%) & 0/10 (0.00\%) & 0/6 (0.00\%) & 0/5 (0.00\%) & 0/7 (0.00\%) & 0/5 (0.00\%) & 0/6 (0.00\%) & 0/8 (0.00\%) & 0/7 (0.00\%) & 0/7 (0.00\%) & 0/4 (0.00\%) & 0/5 (0.00\%) & 0/106 (0.00\%) \\
 藍白拖的逆襲 & 4/6 (66.67\%) & 3/4 (75.00\%) & 6/6 (100.00\%) & 4/4 (100.00\%) & 1/1 (100.00\%) & 1/1 (100.00\%) & 3/3 (100.00\%) & 2/2 (100.00\%) & 3/3 (100.00\%) & 2/2 (100.00\%) & 3/3 (100.00\%) & 3/3 (100.00\%) & 3/4 (75.00\%) & 38/42 (90.48\%) \\
 民間司法改革基金會 & 3/6 (50.00\%) & 3/4 (75.00\%) & 1/1 (100.00\%) & 2/4 (50.00\%) & 4/4 (100.00\%) & 5/6 (83.33\%) & 2/6 (33.33\%) & 2/4 (50.00\%) & 1/10 (10.00\%) & 2/9 (22.22\%) & 3/7 (42.86\%) & 4/9 (44.44\%) & 1/4 (25.00\%) & 33/74 (44.59\%) \\
+\fi
 宋楚瑜 & 7/57 (12.28\%) & 4/51 (7.84\%) & 6/27 (22.22\%) & 3/18 (16.67\%) & 2/12 (16.67\%) & 3/15 (20.00\%) & 0/10 (0.00\%) & 1/17 (5.88\%) & 0/16 (0.00\%) & 2/18 (11.11\%) & 2/18 (11.11\%) & 1/13 (7.69\%) & 1/22 (4.55\%) & 32/294 (10.88\%) \\
 特急件小周的人渣文本 & 19/25 (76.00\%) & 13/20 (65.00\%) & 9/12 (75.00\%) & 8/11 (72.73\%) & 4/5 (80.00\%) & 6/7 (85.71\%) & 5/9 (55.56\%) & 6/8 (75.00\%) & 3/10 (30.00\%) & 9/10 (90.00\%) & 4/6 (66.67\%) & 9/13 (69.23\%) & 4/6 (66.67\%) & 99/142 (69.72\%) \\
-所有粉絲專頁 & 509/2355 (21.61\%) & 446/1868 (23.88\%) & 392/1507 (26.01\%) & 305/1384 (22.04\%) & 340/1303 (26.09\%) & 384/1255 (30.60\%) & 318/1179 (26.97\%) & 373/1240 (30.08\%) & 337/1204 (27.99\%) & 308/1187 (25.95\%) & 468/1244 (37.62\%) & 311/1127 (27.60\%) & 336/1275 (26.35\%) & 4827/18128 (26.63\%) \\* \bottomrule
+{\bfseries 所有粉絲專頁} & 509/2355 (21.61\%) & 446/1868 (23.88\%) & 392/1507 (26.01\%) & 305/1384 (22.04\%) & 340/1303 (26.09\%) & 384/1255 (30.60\%) & 318/1179 (26.97\%) & 373/1240 (30.08\%) & 337/1204 (27.99\%) & 308/1187 (25.95\%) & 468/1244 (37.62\%) & 311/1127 (27.60\%) & 336/1275 (26.35\%) & 4827/18128 (26.63\%) \\* \bottomrule
 \end{longtable}
 \end{landscape}
 
 \begin{figure}[!htbp]
-\centering
-\includegraphics[width=\columnwidth]{sna}
+\makebox[\textwidth][c]{\includegraphics[width=\paperwidth]{sna}}%
 \caption{貼文／連結的「分享」網絡圖}
 \label{f4}
 \end{figure}
