--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -971,6 +971,10 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 然而，具鮮明政治立場，或以抨擊反對陣營為目的的意見領袖，則較常使用攻擊型競選。%
 「Taiwan Fugue」、「反馬英九聯盟」、「不禮貌鄉民團」、「藍白拖的逆襲」等粉絲專頁攻擊型競選貼文的比例皆超過八成。%
 
+對此，有一種可能的情形是，政治人物在其官方粉絲專頁上保持正面競選的形象，但在暗中卻支持其他非官方的粉絲專頁攻擊、批評其反對者。%
+透過這種有意無意的「分工」，政治人物可以在表面上營造清新高尚的形象，同時也實現攻擊型競選的目標。%
+此次選舉究竟是否有這樣的情形發生，有待進一步探討。%
+
 使用攻擊型競選的比例並未隨著時間而有太大的變化，唯有在 11 月 1 日至 11 月 8 日間，%
 或許是因為舉行兩岸領導人會面的緣故，攻擊型競選貼文的比例創下高峰，比平時高出了一成左右。%
 另外，使用攻擊型競選的比例則在投票日前一週達到最低點，比平時低了 5\% 左右。%
@@ -1002,6 +1006,10 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 在此次選舉中最常被人們引用的消息來源是 YouTube（www.youtube.com 或 youtu.be）、%
 自由時報（news.ltn.com.tw）、蘋果日報（www.appledaily.com.tw）和聯合新聞網（udn.com）等等。%
 
+從這裡我們或許也能看出各消息來源在使用者心中的可信度（credibility）。%
+一個消息來源會被一個使用者引用，通常就代表該使用者信任該消息來源。%
+因此，一個消息來源若引用頻率較高，或許也隱含著該消息來源在人們心中擁有較高的可信度。%
+
 \section*{五、結論}
 
 本研究發現此次選舉有 26.63\% 的社群媒體貼文是攻擊型競選，與台灣、中國或中國國民黨有關的議題是人們最關注的焦點，%
@@ -1009,6 +1017,8 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 同時，本研究也提供了後續研究者一套有效地自動化分析線上政治活動的方法。%
 
 本研究做的只是初步的、嘗試性的分析，後續研究者還可以再做更深入的探究。%
+譬如散播不實消息、操縱輿論「帶風向」等行為會對整個網路社群造成什麼樣的影響？%
+網路社群是否容易被誇張聳動卻未經查證的消息煽動？%
 此外，我認為以下幾點也值得進一步探討：%
 
 (1) 比較使用者於網路上對各政黨／候選人／意見領袖表達支持的人數與實際的選舉結果，%
