Revise for 2e (cont.).

--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -973,7 +973,7 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 
 對此，有一種可能的情形是，政治人物在其官方粉絲專頁上保持正面競選的形象，但在暗中卻支持其他非官方的粉絲專頁攻擊、批評其反對者。%
 透過這種有意無意的「分工」，政治人物可以在表面上營造清新高尚的形象，同時也實現攻擊型競選的目標。%
-此次選舉究竟是否有這樣的情形發生，有待進一步探討。%
+這種競舉策略並不罕見，不過此次選舉究竟是否有這樣的情形發生，有待進一步探討。%
 
 使用攻擊型競選的比例並未隨著時間而有太大的變化，唯有在 11 月 1 日至 11 月 8 日間，%
 或許是因為舉行兩岸領導人會面的緣故，攻擊型競選貼文的比例創下高峰，比平時高出了一成左右。%
@@ -991,16 +991,16 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 「Taiwan Fugue」較常分享自由時報（news.ltn.com.tw）及蘋果日報（www.appledaily.com.tw）的消息；%
 「白色正義聯盟」較常分享聯合新聞網（udn.com）的消息；「我是台灣人 (I am Taiwanese)」較常分享「綠黨」的消息等等。%
 
-另外，此圖也呈現出各政黨／侯選人／意見領袖之間的關係。%
-例如「苗博雅 MiaoPoya」、「呂欣潔 Jennifer Lu」和「大安推范雲」皆屬於同一個政黨，因此他們在圖中也屬於同一個社群。%
-同樣地，「白色正義聯盟」、「挺馬英九聯盟」和「藍白拖的逆襲」彼此有相近的政治立場，因此他們在圖中的位置也比較相近。%
-
-\addtolength{\textheight}{-4.8cm} % This command serves to balance the column lengths
+\addtolength{\textheight}{-1.2cm} % This command serves to balance the column lengths
                                   % on the last page of the document manually. It shortens
                                   % the textheight of the last page by a suitable amount.
                                   % This command does not take effect until the next page
                                   % so it should come on the page before the last. Make
                                   % sure that you do not shorten the textheight too much.
+
+另外，此圖也呈現出各政黨／侯選人／意見領袖之間的關係。%
+例如「苗博雅 MiaoPoya」、「呂欣潔 Jennifer Lu」和「大安推范雲」皆屬於同一個政黨，因此他們在圖中也屬於同一個社群。%
+同樣地，「白色正義聯盟」、「挺馬英九聯盟」和「藍白拖的逆襲」彼此有相近的政治立場，因此他們在圖中的位置也比較相近。%
 
 最後，從圖中圓點的大小，我們還可以看出哪些消息來源最常被人們引用。%
 在此次選舉中最常被人們引用的消息來源是 YouTube（www.youtube.com 或 youtu.be）、%
