Finished proofreading for 2nd edition.

--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -80,7 +80,7 @@
 
 \section*{一、緒論}
 
-社群網站的興起不僅改變了我們的社交生活，更改變了許多國家政治與權力的運作規則。%
+社群網站的興起不僅改變了我們的社交生活，更改變了許多國家政治與權力的運作機制。%
 在國內外皆有愈來愈多政治團體與公民團體透過網路來散佈其理念；%
 許多具引響力的社會運動也是透過網路來連結潛在支持者或動員大眾；%
 網路工具的靈活運用甚至還成為候選人能否贏得選舉的關鍵。%
@@ -115,7 +115,7 @@
 \,(4) 鍵擊行動主義（clicktivism）：%
 類似懶人行動主義，若一味地追求點擊率、做網路行銷，可能反而會忽略了實際的行動。%
 \,(5) 網路巴爾幹化（cyberbalkanization）：%
-由於商業壟斷、政治審查、或是個人不願意接觸與自己立場相左的訊息等因素，使網際網路逐漸分裂、解體。%
+由於商業壟斷、政治審查，或是個人不願意接觸與自己立場相左的訊息等因素，使網際網路逐漸分裂、解體。%
 
 \subsection*{資訊科技與人文社會跨領域研究的挑戰與契機}
 
@@ -127,7 +127,7 @@
 
 常見對數位人文的批評包含：%
 \,(1) 只是用一些空洞的戲法來賣弄他們的研究能力，而沒有真正做出什麼新的分析。%
-\,(2) 容易忽略種族、階級、性別、文化、意識型態等面向。%
+\,(2) 容易忽略種族、階級、性別、文化、意識形態等面向。%
 \,(3) 在這個一切都已經被商品化了的現代社會中，人文學科日漸式微。但數位人文卻頂著科技的光環，而獲得了相當高的經費與聲望。%
 \,(4) 研究者的背景不夠多元，其研究可能帶有某些偏見。%
 
@@ -188,7 +188,7 @@
 最後，進行階層式迴歸分析（hierarchical regression analysis）。%
 
 該研究發現：%
-\,(1) 社群網站的使用與公民參與的提升呈現顯著的正相關，與政治參與、對政府的信任則無明顯關聯。%
+\,(1) 社群網站的使用與公民參與的提升呈現顯著的正相關，與政治參與、對政府的信任則無明顯關連。%
 \,(2) 討論政治議題有助於促進公民參與和政治參與，無助於提升對政府的信任。%
 \,(3) 教育程度愈高，愈有可能參與公民活動和政治活動，但對政府的信任卻愈低。%
 \,(4) 然而，政治效能感較高者，其政治信任感也較高。%
@@ -973,7 +973,7 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 
 對此，有一種可能的情形是，政治人物在其官方粉絲專頁上保持正面競選的形象，但在暗中卻支持其他非官方的粉絲專頁攻擊、批評其反對者。%
 透過這種有意無意的「分工」，政治人物可以在表面上營造清新高尚的形象，同時也實現攻擊型競選的目標。%
-這種競舉策略並不罕見，不過此次選舉究竟是否有這樣的情形發生，有待進一步探討。%
+這種競選策略並不罕見，不過此次選舉究竟是否有這樣的情形發生，有待進一步探討。%
 
 使用攻擊型競選的比例並未隨著時間而有太大的變化，唯有在 11 月 1 日至 11 月 8 日間，%
 或許是因為舉行兩岸領導人會面的緣故，攻擊型競選貼文的比例創下高峰，比平時高出了一成左右。%
@@ -1025,7 +1025,7 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 考察社群網站上的輿論反應出社會大眾意見的程度。%
 \,(2) 社會大眾意見極化之現象是否存在？該如何理解？%
 我的推論是，有愈來愈多人使用社群媒體來接收政治新聞，%
-然而台灣許多發佈政治新聞的粉絲專頁都有很鮮明的意識型態，報導內容也相當偏頗。%
+然而台灣許多發佈政治新聞的粉絲專頁都有很鮮明的意識形態，報導內容也相當偏頗。%
 但是社群媒體的檢索演算法會將我們最可能感興趣的文章排序在最前面，%
 因此抱持特定立場者會關注特定的粉絲專頁。%
 機器用戶於粉絲專頁大量留言，或擁護自己的立場，或對反對者批評謾罵，%
