--- a/8-poster/beamerthemeTUGraz.sty
+++ b/8-poster/beamerthemeTUGraz.sty
@@ -149,24 +149,27 @@
     \begin{columns}[T]
       \begin{column}{.02\paperwidth}
       \end{column}
-      \begin{column}{.25\paperwidth}
+      \begin{column}{.14\paperwidth}
         \vskip1cm
         \begin{center}
           \insertlogoleft
-%          \includegraphics[height=4cm]{images/ist_logo.png}
+          %\includegraphics[height=4cm]{images/ist_logo.png}
           %\includegraphics[width=.6\linewidth]{logos/i6-hks44}
         \end{center}
         \vskip1.5cm
       \end{column}
-      \begin{column}{.495\paperwidth}
+      \begin{column}{.67\paperwidth}
         \vskip4ex
         %\raggedleft
         \centering
+        \begin{CJK}{UTF8}{bsmi}
         \usebeamercolor{title in headline}{\color{fg}\textbf{\LARGE{\inserttitle}}\\[1ex]}
         \usebeamercolor{author in headline}{\color{fg}\large{\insertauthor}\\[1ex]}
-        \usebeamercolor{institute in headline}{\color{fg}\large{\insertinstitute}\\[1ex]}     
+        \usebeamercolor{institute in headline}{\color{fg}\large{\insertinstitute}\\[1ex]}
+        \end{CJK}
+        \medskip
       \end{column}
-      \begin{column}{.25\paperwidth}
+      \begin{column}{.14\paperwidth}
         \vskip1cm
         \begin{center}
           \insertlogoright
