--- a/8-poster/main.tex
+++ b/8-poster/main.tex
@@ -13,11 +13,9 @@
 \usepackage{booktabs}
 \usepackage[orientation=portrait,size=a0,scale=1.4]{beamerposter}
 
-\institute[INST]{Institute Name}
-\date[CONF 2017]{Conference Title 2017}
-\subject{CONF 2017}
-\title{Research Title}
-\author[ywpu]{Author Name}
+\institute[nctucs]{國立交通大學資訊工程學系}
+\title{社群網站上之政治活動分析：以台灣 2016 年總統選舉為例}
+\author[ywpu]{學生：蒲郁文\hspace*{1 in}指導教授：孫春在 教授}
 \mail{ywpu@cs.nctu.edu.tw}
 \webpage{http://ywpu.me/}
 
